...
			android:layout_marginStart="2dp"
			android:layout_marginTop="30dp"
			android:layout_width="220dp"
			android:layout_height="2dp"
			/>

		<TextView android:id="@+id/log_in_hyperlink_ek2"
			android:textStyle="bold"
			android:layout_gravity="center_horizontal|center"
			android:gravity="center"
			android:textSize="23sp"
			android:textColor="@color/main_text_color"
			android:layout_marginLeft="-4dp"
...
