...
            android:textColor="@color/white"
            android:textColorHint="@color/hint_input_color"
            />

        <!-- Sign Out Button -->
        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginStart="500dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/secondary_button_shape"
            android:backgroundTint="@color/alternate_bg"
...
