...
            app:layout_constraintVertical_bias="0.225" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Back Button-->
    <Button
        android:id="@+id/back_space_course_history"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="30dp"
...
