...
            android:layout_marginStart="20dp"
            android:layout_width="500dp"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:text="@string/professor_1_string" />

        <Button android:id="@+id/view_professor1_button"
            android:layout_centerVertical="true"
            android:layout_marginStart="830dp"
            android:layout_height="50dp"
            android:layout_width="130dp"
            android:background="@drawable/secondary_button_shape"
            android:textColor="@color/main_text_color"
...
            android:rating="1" />
    </RelativeLayout>
</LinearLayout>

<!--Back Button-->
<Button
    android:id="@+id/back_space_professor_rating_interface"
    android:layout_marginTop="76dp"
    android:layout_marginStart="67dp"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:background="@drawable/bg_main_background_shape"
    android:drawableStart="@drawable/back_space"
...
